arm_sve2/ms1/output/output-10120.err
run_naive_ms1.cpp: In function ‘int main(int, char**)’:
run_naive_ms1.cpp:624:32: error: cannot convert ‘std::common_type<std::chrono::duration<long int, std::ratio<1, 1000000000> >, std::chrono::duration<long int, std::ratio<1, 1000000000> > >::type’ {aka ‘std::chrono::duration<long int, std::ratio<1, 1000000000> >’} to ‘double’ in initialization
  624 |         double omp_time = (end - start);
      |                           ~~~~~^~~~~~~~
      |                                |
      |                                std::common_type<std::chrono::duration<long int, std::ratio<1, 1000000000> >, std::chrono::duration<long int, std::ratio<1, 1000000000> > >::type {aka std::chrono::duration<long int, std::ratio<1, 1000000000> >}
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
rm: cannot remove 'conv_layer': No such file or directory
